{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 56,
  "lineage": "04ff41e6-3e79-d01e-eefe-8751864e56c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:loadbalancer/net/example/447ec704e1a42c98",
            "arn_suffix": "net/example/447ec704e1a42c98",
            "dns_name": "example-447ec704e1a42c98.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:loadbalancer/net/example/447ec704e1a42c98",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "example",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023daeeb6e35c1511"
              },
              {
                "subnet_id": "subnet-07751bacd7ca0d6e9"
              }
            ],
            "subnets": [
              "subnet-023daeeb6e35c1511",
              "subnet-07751bacd7ca0d6e9"
            ],
            "vpc_id": "vpc-0768ffb86a220f1dd",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:listener/net/example/447ec704e1a42c98/7dabb1b27870e99a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:targetgroup/example/4e37e48f6c2d410e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:listener/net/example/447ec704e1a42c98/7dabb1b27870e99a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:loadbalancer/net/example/447ec704e1a42c98",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_target_group.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:targetgroup/example/4e37e48f6c2d410e",
            "arn_suffix": "targetgroup/example/4e37e48f6c2d410e",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "9080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:026550735179:targetgroup/example/4e37e48f6c2d410e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "aws_lb.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:security-group/sg-0dc1b5b3f3b484c0d",
            "description": "nginx security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc1b5b3f3b484c0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "examplenginx-sg",
            "name_prefix": "",
            "owner_id": "026550735179",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:network-acl/acl-0143dfd705ffc2e95",
            "default_network_acl_id": "acl-0143dfd705ffc2e95",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0143dfd705ffc2e95",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "026550735179",
            "subnet_ids": [
              "subnet-023daeeb6e35c1511",
              "subnet-07751bacd7ca0d6e9",
              "subnet-082ec9ef01cb3f4c9",
              "subnet-0bc2fe170d9e23d50"
            ],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:route-table/rtb-0bdebdee00d0b0ec4",
            "default_route_table_id": "rtb-0bdebdee00d0b0ec4",
            "id": "rtb-0bdebdee00d0b0ec4",
            "owner_id": "026550735179",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:security-group/sg-0e91fc3403bc1019e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e91fc3403bc1019e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "026550735179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00acc459e812e0288",
            "domain": "vpc",
            "id": "eipalloc-00acc459e812e0288",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-113-91-150.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.113.91.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089f74c90f26edc73",
            "domain": "vpc",
            "id": "eipalloc-089f74c90f26edc73",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-238-168-94.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.168.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:internet-gateway/igw-0525024aef9b413d4",
            "id": "igw-0525024aef9b413d4",
            "owner_id": "026550735179",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00acc459e812e0288",
            "association_id": "eipassoc-0c0c52fc3c78835fc",
            "connectivity_type": "public",
            "id": "nat-02cac2ec1b52c5e7a",
            "network_interface_id": "eni-0869cda28f3493c2e",
            "private_ip": "10.30.101.199",
            "public_ip": "13.113.91.150",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023daeeb6e35c1511",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089f74c90f26edc73",
            "association_id": "eipassoc-0924cad9ef79a203e",
            "connectivity_type": "public",
            "id": "nat-00f6b16df9b4e7240",
            "network_interface_id": "eni-0ffc1e82f25aaf631",
            "private_ip": "10.30.102.160",
            "public_ip": "54.238.168.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07751bacd7ca0d6e9",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0fd983737b529ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cac2ec1b52c5e7a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0fd983737b529ac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2ebd590c96606641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f6b16df9b4e7240",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2ebd590c9660664",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0525024aef9b413d4",
            "id": "r-rtb-0f70ddf9715ef14c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f70ddf9715ef14c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:route-table/rtb-0e0fd983737b529ac",
            "id": "rtb-0e0fd983737b529ac",
            "owner_id": "026550735179",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:route-table/rtb-0d2ebd590c9660664",
            "id": "rtb-0d2ebd590c9660664",
            "owner_id": "026550735179",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:route-table/rtb-0f70ddf9715ef14c8",
            "id": "rtb-0f70ddf9715ef14c8",
            "owner_id": "026550735179",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c766054c17e3ce4",
            "route_table_id": "rtb-0e0fd983737b529ac",
            "subnet_id": "subnet-082ec9ef01cb3f4c9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738c609d8af21e6b",
            "route_table_id": "rtb-0d2ebd590c9660664",
            "subnet_id": "subnet-0bc2fe170d9e23d50"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5771e4d78889644",
            "route_table_id": "rtb-0f70ddf9715ef14c8",
            "subnet_id": "subnet-023daeeb6e35c1511"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0346ea8d01e2ae0ea",
            "route_table_id": "rtb-0f70ddf9715ef14c8",
            "subnet_id": "subnet-07751bacd7ca0d6e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:subnet/subnet-082ec9ef01cb3f4c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082ec9ef01cb3f4c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026550735179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:subnet/subnet-0bc2fe170d9e23d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc2fe170d9e23d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026550735179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:subnet/subnet-023daeeb6e35c1511",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023daeeb6e35c1511",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026550735179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:subnet/subnet-07751bacd7ca0d6e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07751bacd7ca0d6e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026550735179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0768ffb86a220f1dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:026550735179:vpc/vpc-0768ffb86a220f1dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0143dfd705ffc2e95",
            "default_route_table_id": "rtb-0bdebdee00d0b0ec4",
            "default_security_group_id": "sg-0e91fc3403bc1019e",
            "dhcp_options_id": "dopt-025b1d9491c6161a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0768ffb86a220f1dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdebdee00d0b0ec4",
            "owner_id": "026550735179",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}